# ChordGen

./: .gitignore  HOW_IT_WORKS.md  LICENSE  MIDI_DEVICE_DESIGN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  USAGE_EXAMPLE.md  app.py  demo_youtube.py  pyproject.toml  requirements.txt  simulate_youtube_demo.py  test_video2.py  verify_install.py
chordgen/: __init__.py  analysis.py  arpeggiator.py  audio_io.py  chords.py  config.py  effects.py  generate.py  jazz_theory.py  live_engine.py  midi_clock.py  midi_out.py  midi_sync.py  pattern_manager.py  sequencer.py  utils.py
pages/: 0_🎼_Chord_Generator.py  1_🎹_Arpeggiator.py  2_🎵_Sequencer.py  3_💾_Patterns.py  4_🎸_Live.py  5_🎼_Jazz_Editor.py
presets/: effects.yaml  styles.yaml
tests/: test_basic.py
